data/derived/comb/progs/unify/prog0736.ml.out
Characters 56-57:
  | h::t -> h + t in xs;;
                ^
Error: This expression has type int list
       but an expression was expected of type int
